# trenchkit

./: .gitignore  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENSE.md  MODMAKER.md  Makefile  README.md
.claude/: settings.local.json
.github/: pull_request_template.md  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
.github/workflows/: build.yml  issue-labeler.yml  release-drafter.yml
extras/textures/: tex_container.xcf  tex_main.xcf  tex_panel.xcf
src/: CMakeLists.txt  FoxholeDetector.cpp  InstallPathWidget.cpp  InstallPathWidget.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  app.rc  main.cpp  resources.qrc
src/common/modals/: BaseModalContent.cpp  BaseModalContent.h  InputModal.cpp  InputModal.h  MessageModal.cpp  MessageModal.h  ModalContainer.cpp  ModalManager.h  ModalOverlay.h  ProgressModal.cpp  ProgressModal.h
src/common/widgets/: GradientFrame.cpp  PanelFrame.cpp  TitleBar.cpp
src/core/api/: ItchClient.h  NexusModsAuth.cpp  NexusModsClient.cpp  NexusModsClient.h
src/core/managers/: ModManager.cpp  ModManager.h  ProfileManager.cpp  ProfileManager.h
src/core/models/: ModInfo.cpp  ModInfo.h  NexusFileInfo.h  ProfileInfo.cpp
src/core/services/: ItchModUpdateService.cpp  ItchModUpdateService.h  ModConflictDetector.cpp  ModConflictDetector.h  ModUpdateService.cpp  ModUpdateService.h  UpdaterService.cpp
src/core/utils/: ArchiveExtractor.cpp  ArchiveExtractor.h  FoxholeDetector.cpp  FoxholeDetector.h  ItchUrlParser.h  Logger.cpp  Logger.h  ModManifestReader.cpp  ModManifestReader.h  PakFileReader.cpp  PakFileReader.h  Theme.cpp  TranslationManager.cpp  TranslationManager.h  TsTranslator.cpp  TsTranslator.h  UpdateArchiveExtractor.cpp  UpdateCleanup.h
src/i18n/: TRANSLATING.md  TrenchKit_en.ts  TrenchKit_nb.ts
src/locales/: TRANSLATING.md  TrenchKit_en.ts  TrenchKit_es.ts  TrenchKit_nb.ts  TrenchKit_template.ts
src/modals/: BaseModalContent.cpp  InputModal.cpp  InputModal.h  MessageModal.cpp  MessageModal.h  ModalContainer.cpp  ModalContainer.h  ModalManager.cpp  ModalManager.h  ModalOverlay.cpp  ProgressModal.cpp  ProgressModal.h
src/modals/content/: AddModModalContent.cpp  AddModModalContent.h  BackupSelectionModalContent.cpp  BackupSelectionModalContent.h  ConflictDetailModalContent.cpp  ConflictDetailModalContent.h  ConflictResolutionModalContent.cpp  ConflictResolutionModalContent.h  FileSelectionModalContent.cpp  FileSelectionModalContent.h  ItchDownloadModalContent.cpp  ItchDownloadModalContent.h  ItchModUpdateModalContent.cpp  ItchModUpdateModalContent.h  ItchRegistrationModalContent.cpp  ItchRegistrationModalContent.h  ModMetadataModalContent.cpp  ModMetadataModalContent.h  ModUpdateModalContent.cpp  ModUpdateModalContent.h  NexusDownloadModalContent.cpp  NexusDownloadModalContent.h  NexusRegistrationModalContent.cpp  NexusRegistrationModalContent.h
src/modals/mod_manager/: AddModModalContent.cpp  AddModModalContent.h  BackupSelectionModalContent.cpp  BackupSelectionModalContent.h  ConflictDetailModalContent.cpp  ConflictDetailModalContent.h  ConflictResolutionModalContent.cpp  ConflictResolutionModalContent.h  FileSelectionModalContent.cpp  FileSelectionModalContent.h  ItchDownloadModalContent.cpp  ItchDownloadModalContent.h  ItchModUpdateModalContent.cpp  ItchModUpdateModalContent.h  ItchRegistrationModalContent.cpp  ItchRegistrationModalContent.h  ModMetadataModalContent.cpp  ModMetadataModalContent.h  ModUpdateModalContent.cpp  ModUpdateModalContent.h  NexusDownloadModalContent.cpp  NexusDownloadModalContent.h  NexusRegistrationModalContent.cpp  NexusRegistrationModalContent.h
src/utils/: ArchiveExtractor.cpp  ArchiveExtractor.h  ItchAuth.cpp  ItchAuth.h  ItchClient.cpp  ItchClient.h  ItchModUpdateService.cpp  ItchModUpdateService.h  ItchUpdateInfo.h  ItchUploadInfo.cpp  ItchUploadInfo.h  ItchUrlParser.cpp  ModConflictDetector.cpp  ModConflictDetector.h  ModInfo.cpp  ModInfo.h  ModManager.cpp  ModManager.h  ModUpdateInfo.h  ModUpdateService.cpp  ModUpdateService.h  NexusFileInfo.cpp  NexusFileInfo.h  NexusModsAuth.cpp  NexusModsAuth.h  NexusModsClient.cpp  NexusModsClient.h  NexusUrlParser.cpp  NexusUrlParser.h  PakFileReader.cpp  PakFileReader.h  ProfileInfo.h  ProfileManager.cpp  ProfileManager.h  Theme.cpp  Theme.h  UpdateArchiveExtractor.cpp  UpdateArchiveExtractor.h  UpdateCleanup.cpp  UpdateCleanup.h  (+2 more)
src/views/mod_manager/: ActionsWidget.cpp  ActionsWidget.h  ActivityLogWidget.cpp  ActivityLogWidget.h  BackupWidget.cpp  BackupWidget.h  ConflictTooltip.cpp  ConflictTooltip.h  DraggableModList.cpp  DraggableProfileList.cpp  DraggableProfileList.h  InstallPathWidget.cpp  InstallPathWidget.h  LaunchWidget.cpp  LaunchWidget.h  LogEntryWidget.cpp  LogEntryWidget.h  ModListWidget.cpp  ModListWidget.h  ModRowWidget.cpp  ModRowWidget.h  ProfileManagerWidget.cpp  ProfileManagerWidget.h  ProfileRowWidget.cpp  ProfileRowWidget.h  RightPanelWidget.cpp  RightPanelWidget.h
src/views/settings/: SettingsWidget.cpp  SettingsWidget.h
src/widgets/: ActionsWidget.cpp  ActionsWidget.h  ActivityLogWidget.cpp  ActivityLogWidget.h  AddModDialog.cpp  AddModDialog.h  BackupWidget.cpp  BackupWidget.h  ConflictTooltip.h  DraggableModList.cpp  DraggableModList.h  FileSelectionDialog.cpp  FileSelectionDialog.h  GradientFrame.cpp  GradientFrame.h  InstallPathWidget.cpp  InstallPathWidget.h  ItchDownloadDialog.cpp  ItchDownloadDialog.h  ItchFileSelectionDialog.cpp  ItchFileSelectionDialog.h  ItchModUpdateDialog.cpp  ItchModUpdateDialog.h  LaunchWidget.cpp  LaunchWidget.h  LogEntryWidget.cpp  ModListWidget.cpp  ModListWidget.h  ModMetadataDialog.cpp  ModMetadataDialog.h  ModRowWidget.cpp  ModRowWidget.h  ModUpdateDialog.cpp  ModUpdateDialog.h  NexusDownloadDialog.cpp  NexusDownloadDialog.h  NexusFileSelectionDialog.cpp  NexusFileSelectionDialog.h  PanelFrame.cpp  PanelFrame.h  (+9 more)
tests/: CMakeLists.txt  TestModManifest.cpp  TestTsTranslator.cpp  TestUtilities.cpp
tools/: package_release.py
updater/: CMakeLists.txt  main.cpp
